--- a/index_.html
+++ b/index_.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <title>Backbone Home</title>
     <script src="js/libs/jquery/dist/jquery.js"></script>
@@ -11,6 +12,7 @@
 
 <script src="js/app.js"></script>
 
+<!--
 <div class="col-sm-6" align="center">
     <h2>Hello inside homepage!</h2>
     <h4><a href="user/signup">Signup</a></h4>
@@ -27,6 +29,7 @@
         <input type="submit" value="Upload">
     </form>
 </div>
+-->
 
 
 </body>
