--- a/index_.html
+++ b/index_.html
@@ -9,16 +9,19 @@
     <script src="js/libs/backbone/backbone.js"></script>
 </head>
 <body>
-
+<script src="js/models/customer.js"></script>
+<script src="js/collections/customer.js"></script>
 <script src="js/app.js"></script>
 
-<!--
-<div class="col-sm-6" align="center">
+
+
+
+<!--<div class="col-sm-6" align="center">
     <h2>Hello inside homepage!</h2>
     <h4><a href="user/signup">Signup</a></h4>
     <h4><a href="user/register">Register</a></h4>
-    <h4><a href="user/list">get all users</a></h4>
-    <h4><a href="category/list">get all categories</a></h4>
+    <h4><a href="user/">get all users</a></h4>
+    <h4><a href="category/">get all categories</a></h4>
 </div>
 
 
