bkbn models&collections

--- a/index_.html
+++ b/index_.html
@@ -10,7 +10,17 @@
 </head>
 <body>
 <script src="js/models/customer.js"></script>
+<script src="js/models/order.js"></script>
+<script src="js/models/category.js"></script>
+<script src="js/models/item.js"></script>
+<script src="js/models/comment.js"></script>
+
 <script src="js/collections/customer.js"></script>
+<script src="js/collections/order.js"></script>
+<script src="js/collections/category.js"></script>
+<script src="js/collections/item.js"></script>
+<script src="js/collections/comment.js"></script>
+
 <script src="js/app.js"></script>
 
 
