--- a/index_.html
+++ b/index_.html
@@ -4,25 +4,10 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <title>Backbone Home</title>
-    <script src="js/libs/jquery/dist/jquery.js"></script>
-    <script src="js/libs/underscore/underscore.js"></script>
-    <script src="js/libs/backbone/backbone.js"></script>
+    <script data-main="js/main.js" src="js/libs/requirejs/require.js"></script>
 </head>
 <body>
-<script src="js/models/customer.js"></script>
-<script src="js/models/order.js"></script>
-<script src="js/models/category.js"></script>
-<script src="js/models/item.js"></script>
-<script src="js/models/comment.js"></script>
-
-<script src="js/collections/customer.js"></script>
-<script src="js/collections/order.js"></script>
-<script src="js/collections/category.js"></script>
-<script src="js/collections/item.js"></script>
-<script src="js/collections/comment.js"></script>
-
-<script src="js/app.js"></script>
-
+<div id="container"></div>
 
 
 
