--- a/index_.html
+++ b/index_.html
@@ -9,8 +9,6 @@
 <body>
 <div id="container"></div>
 
-
-
 <!--<div class="col-sm-6" align="center">
     <h2>Hello inside homepage!</h2>
     <h4><a href="user/signup">Signup</a></h4>
@@ -26,8 +24,8 @@
         <input type="file" name="upload" multiple="multiple"><br>
         <input type="submit" value="Upload">
     </form>
-</div>
--->
+</div>-->
+
 
 
 </body>
