--- a/index_.html
+++ b/index_.html
@@ -1,13 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="/js/libs/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <script src="/js/libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
     <title>Backbone Home</title>
     <script data-main="js/main.js" src="js/libs/requirejs/require.js"></script>
+
 </head>
 <body>
-<div id="container"></div>
+<div class="navbar-wrapper">
+    <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+        <div>
+            <div class="navbar-header">
+                <button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse" type="button">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Bicycle Store</a>
+            </div>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="" alt="Bike">
+            <div class="carousel-caption">
+                <h3>Bike</h3>
+                <p>Text here.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="" alt="Bike">
+            <div class="carousel-caption">
+                <h3>Bike</h3>
+                <p>Text here.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="" alt="Bike">
+            <div class="carousel-caption">
+                <h3>Bike</h3>
+                <p>Text here.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="" alt="Bike">
+            <div class="carousel-caption">
+                <h3>Bike</h3>
+                <p>Text here.</p>
+            </div>
+        </div>
+    </div>
+
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<div id="myContainer_1" class="container">
+   <div id="container"></div>
+</div>
+
+<div id="myContainer_2" class="container">
+    <div id="container_2"></div>
+</div>
+
+</body>
+</html>
 
 <!--<div class="col-sm-6" align="center">
     <h2>Hello inside homepage!</h2>
@@ -17,7 +107,6 @@
     <h4><a href="category/">get all categories</a></h4>
 </div>
 
-
 <div class="col-sm-6" align="center">
     <h2>test picture uploading</h2>
     <form enctype="multipart/form-data" action="user/upload" method="post">
@@ -25,8 +114,3 @@
         <input type="submit" value="Upload">
     </form>
 </div>-->
-
-
-
-</body>
-</html>
