--- a/index_.html
+++ b/index_.html
@@ -5,12 +5,14 @@
     <link rel="stylesheet" href="/js/libs/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
     <script src="/js/libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <meta charset="UTF-8">
-    <title>Backbone Home</title>
     <script data-main="js/main.js" src="js/libs/requirejs/require.js"></script>
-
+    <meta charset="UTF-8">
+    <title>Bicycle Home</title>
 </head>
 <body>
+
+<!--CAROUSEL-->
+<!--
 <div class="navbar-wrapper">
     <div class="navbar navbar-inverse navbar-static-top" role="navigation">
         <div>
@@ -35,7 +37,7 @@
 </div>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
+    &lt;!&ndash; Indicators &ndash;&gt;
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -43,36 +45,36 @@
         <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
+    &lt;!&ndash; Wrapper for slides &ndash;&gt;
+    <div class="carousel-inner" role="listbox" align="center">
         <div class="item active">
-            <img src="" alt="Bike">
+            <img src="/images/backgrounds/cruizer.jpg" alt="Cruiser">
             <div class="carousel-caption">
-                <h3>Bike</h3>
+                <h3>Cruiser</h3>
                 <p>Text here.</p>
             </div>
         </div>
 
-        <div class="item">
-            <img src="" alt="Bike">
+        <div class="item" align="center">
+            <img src="/images/backgrounds/mountain.jpg" alt="Mountain">
             <div class="carousel-caption">
-                <h3>Bike</h3>
+                <h3>Mountain</h3>
                 <p>Text here.</p>
             </div>
         </div>
 
-        <div class="item">
-            <img src="" alt="Bike">
+        <div class="item" align="center">
+            <img src="/images/backgrounds/fixed.jpg" alt="Fixed Gear">
             <div class="carousel-caption">
-                <h3>Bike</h3>
+                <h3>Fixed Gear</h3>
                 <p>Text here.</p>
             </div>
         </div>
 
-        <div class="item">
-            <img src="" alt="Bike">
+        <div class="item" align="center">
+            <img src="/images/backgrounds/women.jpg" alt="Women">
             <div class="carousel-caption">
-                <h3>Bike</h3>
+                <h3>Women</h3>
                 <p>Text here.</p>
             </div>
         </div>
@@ -87,30 +89,11 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+-->
 
-<div id="myContainer_1" class="container">
+<div>
    <div id="container"></div>
-</div>
-
-<div id="myContainer_2" class="container">
-    <div id="container_2"></div>
 </div>
 
 </body>
 </html>
-
-<!--<div class="col-sm-6" align="center">
-    <h2>Hello inside homepage!</h2>
-    <h4><a href="user/signup">Signup</a></h4>
-    <h4><a href="user/register">Register</a></h4>
-    <h4><a href="user/">get all users</a></h4>
-    <h4><a href="category/">get all categories</a></h4>
-</div>
-
-<div class="col-sm-6" align="center">
-    <h2>test picture uploading</h2>
-    <form enctype="multipart/form-data" action="user/upload" method="post">
-        <input type="file" name="upload" multiple="multiple"><br>
-        <input type="submit" value="Upload">
-    </form>
-</div>-->
